Fixed center alignment on animated intro

--- a/app/_styles/components.scss
+++ b/app/_styles/components.scss
@@ -293,6 +293,7 @@
   font-family: $font-inter;
   font-weight: bold;
   text-align: center;
+  align-items: center;
   color: $color-white-broken;
   font-size: 100px;
 }
